2008-10-20  Dan Williams  <dcbw@redhat.com>

	* gconf-helpers/nma-gconf-connection.c
		- (service_get_secrets): fix for exported connection class clarifications

2008-10-18  Kjartan Maraas  <kmaraas@gnome.org>

	* src/connection-editor/ce-page-ip4.glade: Don't translate
	widget labels.

2008-10-17  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.c
		- (default_filter, eap_method_default_file_chooser_filter_new): accept
			.cer and .crt file extensions too

2008-10-15  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (get_security_for_ap): fix the following case for cards that can't
			do WPA or RSN but can pass through the information elements, and
			where the AP has privacy turned on in the beacon

2008-10-10  Tambet Ingo  <tambet@gmail.com>

	* nm-connection-editor.desktop: Add.

2008-10-09  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (nm_gconf_set_stringhash_helper): ensure that stale info isn't left
			around by removing keys that aren't in the stringhash that's about
			to be written to GConf

2008-10-09  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- 'network' -> 'setting'; 'network' was left over from 0.6 when SSIDs
			were part of the GConf path

2008-10-08  Alexander Sack  <asac@ubuntu.com>

	* src/connection-editor/page-ip4.c
		- (ui_to_setting) don't stop processing ui_to_settings when
			when g_strsplit_set result list contains an empty string.

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
		- (*_get_icon): use the active connection for more information in the
			tooltip

	* src/applet.c
	  src/applet.h
		- (applet_get_device_icon_for_state): pass active connection through
			to the get_icon device class handler

2008-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c