@@ -120,11 +120,6 @@ fill_connection (EAPMethod *parent, NMConnection *connection)
 
 	s_8021x->eap = g_slist_append (s_8021x->eap, g_strdup ("ttls"));
 
-	// FIXME: allow protocol selection and filter on device capabilities
-	// FIXME: allow pairwise cipher selection and filter on device capabilities
-	// FIXME: allow group cipher selection and filter on device capabilities
-	ws_wpa_fill_default_ciphers (connection);
-
 	widget = glade_xml_get_widget (parent->xml, "eap_ttls_anon_identity_entry");
 	g_assert (widget);
 	text = gtk_entry_get_text (GTK_ENTRY (widget));
